--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <input type="text" placeholder="Digite seu CEP" id="cep">
     <button onclick="buscarCep()">Aperte Para Pesquisar CEP</button>
+    <p id="resposta"></p>
 </body>
 </html>
