--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Busca CEP</title>
 </head>
 <body>
     <input type="text" placeholder="Digite seu CEP" id="cep">
